--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "login-form",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/anbuselvam2004/Tour-Trekker-Booking-Application-.git/",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
@@ -29,9 +28,8 @@
     "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
+    "eject": "react-scripts eject"
+   
   },
   "eslintConfig": {
     "extends": [
